2001-07-26  Bruno Haible  <haible@clisp.cons.org>

	* automake.diff: Update for automake-1.4-p5.

2001-08-01  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el: Optimize testing for XEmacs.
	(po-auto-replace-revision-date): Do not quote t, as it evals to
	itself.
	(po-validate): Use the mode name instead of the constant PO to build
	the validation buffer name.
	(po-font-lock-keywords, po-find-charset,
	po-find-file-coding-system-guts, po-find-file-coding-system): Adjust
	some lines so they fit in 79 columns (pre-VT100).
	(po-compute-counters): Use string-equal instead of string=, to be
	consistent with the remainder of that code.
	(po-find-charset): Avoid infinite loop on empty file.

2000-05-31  Hrvoje Niksic  <hniksic@iskon.hr>

	* po-mode.el (po-create-overlay, po-highlight, po-rehighlight,
	po-dehighlight): Use XEmacs extent primitives.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* automake.diff: New file.

2001-08-02  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Change bug report address to
	<bug-gnu-gettext@gnu.org>.

2001-07-14  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-abbrev-table): New variable.
	(po-edit-string): Use it.

2001-07-13  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-fade-out-entry): Replace yes-or-no-p by y-or-n-p;
	obsoleting an entry isn't fatal.

2000-01-18  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-ensure-source-references): Correctly imply the file
	name from the last which has been explicitly given.

2000-01-17  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-subedit-abort): Change variable names.
	(po-seek-equivalent-translation): Call set-buffer instead of
	select-buffer.
	(po-subedit-cycle-auxiliary): Adapt to multiple edits.

2001-08-12  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-find-charset, po-compute-counters,
	po-check-file-header, po-set-msgstr): Emacs 19 portability matters.

2000-01-03  François Pinard  <pinard@iro.umontreal.ca>